--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -773,3 +773,49 @@ bottom: 0px !important;
     .navbar {
       overflow: hidden
     }
+
+
+/* Styles for Sticky Socials*/
+    .sticky-container{
+        padding: 0px;
+        margin: 0px;
+        position: fixed;
+        right: -119px;
+        top:200px;
+        width: 200px;
+
+    }
+
+    .sticky li{
+        list-style-type: none;
+        background-color: #ffffff;
+        color: #000000;
+        height: 43px;
+        padding: 0px;
+        margin: 0px 0px 1px 0px;
+        -webkit-transition:all 0.25s ease-in-out;
+        -moz-transition:all 0.25s ease-in-out;
+        -o-transition:all 0.25s ease-in-out;
+        transition:all 0.25s ease-in-out;
+        cursor: pointer;
+    }
+
+    .sticky li:hover{
+        margin-left: -115px;
+        -webkit-filter: grayscale(0%);
+    }
+
+    .sticky li img{
+        float: left;
+        margin: 5px 5px;
+        margin-right: 10px;
+
+    }
+
+    .sticky li p{
+        padding: 0px;
+        margin: 0px;
+        text-transform: uppercase;
+        line-height: 43px;
+
+    }
