--- a/assets/tipuedrop/tipuedrop.css
+++ b/assets/tipuedrop/tipuedrop.css
@@ -13,14 +13,15 @@ http://www.tipue.com/drop
 	color: #333;
 	padding: 12px 15px 12px 40px;
 	width: 250px;
+     height: 35px;
 	border: 1px solid #e2e2e2;
 	border-radius: 5px;
 	-moz-appearance: none;
 	-webkit-appearance: none;
      box-shadow: none; 
 	outline: 0;
-	margin-top: 5px;
-	background: #fff url('img/search.png') no-repeat 15px 15px;
+	margin-top: 2px;
+	background: #fff url('img/search.png') no-repeat 15px 10px;
 }
 #tipue_drop_input:focus
 {
