--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,7 +17,8 @@ h2.title {
 .product-image-wrapper{
 	border:1px solid #F7F7F5;
 	overflow: hidden;
-	margin-bottom:30px;
+	margin-bottom:10px;
+  background-color: #820024;
 }
 
 .single-products {
@@ -31,8 +32,8 @@ h2.title {
   right: 0;
 }
 
-.productinfo h3{
-	color: #820024;
+.productinfo p.productlabel{
+	color: #fff;
 	font-family: 'Roboto', sans-serif;
 	font-size: 22px;
 	font-weight: 700;
@@ -46,10 +47,11 @@ h2.title {
 
 
 .productinfo p{
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  color: #696763;
+  font-size: 20px;
+  font-weight: 200;
+  color: #fff;
+  padding: 10px 0px 0px 10px;
+  text-align: left;
 }
 
 .productinfo img{
@@ -74,7 +76,7 @@ h2.title {
 
 .single-products:hover .product-overlay {
   display:block;
-  height:80%;
+  height:84%;
 }
 
 
